--- a/index.html
+++ b/index.html
@@ -12,25 +12,39 @@
         <div class="box">
             <div class="agecnvt">
             <label class="text-dark ">Age:</label>
-            <input type="text" id="ageInput" placeholder="Enter Your Age" >
+            <input type="text" id="ageInput" placeholder=" Enter Your Age" >
         </div>
         <div class="result">
             <button class="btn btn-secondary" id="checkAgeBtn" onclick="myFunction1(event)">Convert Age </button>
-           <label class="text-dark ">Result: <input type="text" id="ageOutput" readonly></label>
+           <label class="text-dark ">Result: <input type="text" id="ageOutput" readonly  placeholder=" in days"></label>
         </div>
     </div>
        <div class="box">
         <div class="agecnvt">
             <label class="text-dark ">Hours:</label>
-            <input type="text" id="hoursInput" placeholder="Enter Hours" >
+            <input type="text" id="hoursInput" placeholder=" Enter Hours" >
         </div>
         <div class="result">
             <button class="btn btn-secondary" id="checkHoursBtn" onclick="myFunction2(event)">Convert Hours </button>
-           <label class="text-dark ">Result: <input type="text" id="hoursOutput" readonly></label>
+           <label class="text-dark ">Result: <input type="text" id="hoursOutput" readonly  placeholder=" in seconds"></label>
         </div>
     </div>
         </div>
-
+    <div class="main">
+        <div class="box">
+            <div class="agecnvt">
+            <label class="text-dark ">Numbers:</label>
+            <input type="text" id="num" placeholder=" 1,2,3,4...." >
+            <div>
+                <label class="text-dark mt-2">Enter Digit:</label>
+                <input type="text" id="num" placeholder=" Any digit from above" >
+            </div>
+        </div>
+        <div class="result">
+            <button class="btn btn-secondary" id="checkAgeBtn" onclick="myFunction1(event)">Find Next:</button>
+           <label class="text-dark ">Result: <input type="text" id="ageOutput" readonly></label>
+        </div>
+    </div>
 
 
 
