--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         </div>
     </div>
     <div class="box">
-        <div class="agecnvt">
+        <div class="agecnvt ms-3">
             <label class="text-dark ">Numbers:</label>
             <input type="text" id="num" placeholder=" 1,2,3,4...." >
             <div>
                 <label class="text-dark mt-2">Enter Digit:</label>
                 <input type="text" id="num2" placeholder=" Any digit from above" >
+                <label class="text-dark mt-2"> One Digit:</label>
+                <input type="text" id="num3" placeholder=" Enter single digit" >
             </div>
         </div>
         <div class="result">
@@ -53,7 +55,7 @@
         </div>
         <div class="result">
             <button class="btn btn-secondary" onclick="myFunction4(event)">Convert Name </button>
-           <label class="text-dark ">Result: <input type="text" id="nameOutput" readonly  placeholder="Sentence case"></label>
+           <label class="text-dark ">Result: <input type="text" id="nameOutput" readonly  placeholder=" Sentence case"></label>
         </div>
     </div>
     <div class="box">
